# gbkomi

./: README.md  pyproject.toml
gbkomi/: __init__.py  dbcrypto.py  encryption.py  exceptions.py  filecrypto.py  gblog.py  gbtoken.py  hashing.py  kdf.py  keygen.py  telegram_crypto.py
gbkomi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_gbkomi.py
